@@ -79,10 +79,11 @@ public interface ArgumentsProvider {
 			return provideArguments(context);
 		}
 		catch (Exception e) {
-			throw new JUnitException(String.format(
-				"ArgumentsProvider does not override the provideArguments(ParameterDeclarations, ExtensionContext) method. "
-						+ "Please report this issue to the maintainers of %s.",
-				getClass().getName()), e);
+			String message = """
+					ArgumentsProvider does not override the provideArguments(ParameterDeclarations, ExtensionContext) method. \
+					Please report this issue to the maintainers of %s.""".formatted(
+				getClass().getName());
+			throw new JUnitException(message, e);
 		}
 	}
 
